--- a/content/archive/269.md
+++ b/content/archive/269.md
@@ -5,17 +5,9 @@ tags = []
 date = "2012-01-18"
 +++
 
-Som du kan se, er Bitbureauet i dag blevet censureret. Vi gør det som led i en
-global kampagne for at skabe opmærksomhed omkring urimelige og absurde love
-der har til formål at bekæmpe ulovlig fildeling, men som får meget værre
-konsekvenser for internettet hvis de indføres. Vi snakker selvfølgelig om SOPA
-og PIPA fra USA, som du kan[ læse mere om
-her](http://blog.reddit.com/2012/01/technical-examination-of-sopa-and.html).
-Timingen er egentlig meget god, for i dag tages også et stort skridt henimod
-en afklaring af fremtiden for bekæmpelsen af ulovlig fildeling her i Danmark.
-Kulturudvalget afholder i disse timer en [eksperthøring om den såkaldte
-brevmodel](http://www.comon.dk/art/208742/her-er-pirat-eksperterne-der-skal-
-raadgive-folketinget-om-fildeling). Lad os håbe at disse eksperter får
-overbevist kulturministeren og resten af folketinget om, at denne brevmodel er
-det rene vanvid og totalt nyttesløst.
+Som du kan se, er Bitbureauet i dag blevet censureret. Vi gør det som led i en global kampagne for at skabe opmærksomhed omkring urimelige og absurde love der har til formål at bekæmpe ulovlig fildeling, men som får meget værre konsekvenser for internettet hvis de indføres. Vi snakker selvfølgelig om SOPA og PIPA fra USA, som du kan[ læse mere om her](http://blog.reddit.com/2012/01/technical-examination-of-sopa-and.html).
+
+Timingen er egentlig meget god, for i dag tages også et stort skridt henimod en afklaring af fremtiden for bekæmpelsen af ulovlig fildeling her i Danmark. Kulturudvalget afholder i disse timer en [eksperthøring om den såkaldte brevmodel](http://www.comon.dk/art/208742/her-er-pirat-eksperterne-der-skal- raadgive-folketinget-om-fildeling).
+
+Lad os håbe at disse eksperter får overbevist kulturministeren og resten af folketinget om, at denne brevmodel er det rene vanvid og totalt nyttesløst.
 
